--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
-.App {
+/** @format */
+@import url("https://fonts.googleapis.com/css2?family=Lemonada:wght@700&display=swap");
+* {
+  font-family: "Lemonada", cursive;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+.main_div {
+  width: 100%;
+  height: 100vh;
+  background-color: #6983aa;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sub_div {
+  width: 25%;
+  height: 80vh;
+  background-color: #fff;
+
+  box-shadow: 5px 5px 25px -5px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  font-size: 30px;
+  color: #fff;
+  background: transparent;
+  background-color: #8566aa;
+  padding: 6px 0 2px 0;
+  margin-bottom: 10px;
+  text-shadow: 0 2px 2px #000;
+}
+input {
+  text-align: center;
+  height: 30px;
+  top: 10px;
+  border: none;
+  background: transparent;
+  font-size: 20px;
+  font-weight: 500;
+  width: 60%;
+  border-radius: 2px solid #8566aa;
+  outline: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.fa-plus-circle {
+  min-height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: #fff;
+  color: #8566aa;
+  font-size: 40px;
+  border: none;
+  outline: none;
+  margin-left: 10px;
+}
+
+.fa-plus-circle:hover {
+  color: green;
+}
+
+ol li {
+  padding-left: 0px;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 500;
+  min-height: 40px;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  color: #8566aa;
+  text-transform: capitalize;
+}
+
+.todo_style {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+}
+
+.todo_style .fa-times {
+  width: 20px;
+  height: 20px;
+  background-color: #bba6d4;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border-radius: 50%;
+  margin: 0px 15px 0 35px;
+  color: rgb(255, 255, 255);
+  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.5);
 }
 
-.App-link {
-  color: #61dafb;
+.todo_style .fa-times:hover {
+  background-color: red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 768px) {
+  .sub_div {
+    width: 55%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .todo_style .fa-times {
+    margin: 0 15px 0 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .fa-plus-circle {
+    margin-left: 5px;
+    min-height: 40px;
+    width: 40px;
+    font-size: 30px;
   }
 }
